Resolve #5 Parent Selector Image Focal Point
This commit updates the styling for the buttons so taht we do not cut off and zoom in on the images in the mobile view.

--- a/app/javascript/styles/map.scss
+++ b/app/javascript/styles/map.scss
@@ -89,6 +89,8 @@ body {
   width: 100%;
 
   &__button {
+    background-position: top;
+    background-size: cover;
     border: 0;
     border-radius: 1.5rem;
     cursor: pointer;
